# lia

./: .gitignore  CMakeLists.txt  README.md  premake5.lua  vs2019-Win-GenProject.bat
Sandbox/src/: Source.cpp
gdm/: mat4.cpp  mat4.h  mathbase.h  quaternion.h  vec2.h  vec4.h
gdm/src/: mat4.cpp  mat4.h  mathbase.h  vec2.h  vec3.h  vec4.h
include/lia/: lia.h  mathbase.h  quaternion.h  vec3.h  vec4.h
lia/: lia.cpp  lia.h  mat4.h  mathbase.h  quaternion.h  tests.cpp  tests.h  vec2.h  vec3.h  vec4.h
src/: mathbase.h  quaternion.h  tests.cpp  tests.h  vec2.h  vec3.h  vec4.h
tests/: CMakeLists.txt  Helpers.cpp  Helpers.h  MatTest.cpp  QuaternionTest.cpp  VecTest.cpp  tests.cpp
